Minor scrollbar view fix

--- a/src/assets/styles/multiSelect.scss
+++ b/src/assets/styles/multiSelect.scss
@@ -88,7 +88,7 @@ $input-border-color: #cbc9c7;
     }
 
     &::-webkit-scrollbar {
-      width: 4px;
+      width: 5px;
     }
 
     &::-webkit-scrollbar-track {
